Modernise
Use modern Java features such as virtual threads to improve Java OIO performance.
Add more source/sink classes for fun.